move to postgresql

--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,3 +2,18 @@ spring.application.name=store
 spring.main.allow-bean-definition-overriding=true
 
 server.port=8080
+
+spring.security.user.name=blixza
+spring.security.user.password=test
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=2497
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+logging.level.org.springframework.security=DEBUG
+spring.jpa.show-sql=true
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
