--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,8 @@
     "@vueuse/core": "^13.9.0",
     "@wdns/vue-code-block": "^2.3.5",
     "axios": "^1.12.2",
+    "fuse": "^0.12.1",
+    "fuse.js": "^7.1.0",
     "gsap": "^3.13.0",
     "lucide-vue-next": "^0.544.0",
     "vue": "^3.5.21"
